--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="instafeed.js/instafeed.min.js"></script>
     <script type="text/javascript">
       var userFeed = new Instafeed({
+      resolution: 'standard_resolution',
       get: 'user',
       userId: '2369800464',
       accessToken: '2369800464.d4f2022.f3825404938741d0893d97494aacd563',
